--- a/ansible-playbooks/skyplan/roles/download_go_tools/tasks/main.yml
+++ b/ansible-playbooks/skyplan/roles/download_go_tools/tasks/main.yml
@@ -20,23 +20,23 @@
     go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.32.0
     go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2.0
     go install github.com/cosmtrek/air@v1.42.0
-    # These are the latest versions of gopls, dlv, and staticcheck which work with Go 1.20.
+    # These are the latest versions of gopls, dlv, and staticcheck which work with Go 1.24.
     # Update these to @latest once the product has moved to a supported version of Go.
-    go install golang.org/x/tools/gopls@v0.15.3
-    go install github.com/go-delve/delve/cmd/dlv@v1.22.1
-    go install honnef.co/go/tools/cmd/staticcheck@v0.4.7
+    go install golang.org/x/tools/gopls@latest
+    go install github.com/go-delve/delve/cmd/dlv@latest
+    go install honnef.co/go/tools/cmd/staticcheck@latest
   args:
     chdir: "{{ go_project_path }}"
     executable: /bin/zsh
 
-- name: Install json2tmux via go get
-  shell: go get github.com/ericksonjoseph/json2tmux
-  args:
-    chdir: "{{ go_project_path }}"
-    executable: /bin/zsh
+# - name: Install json2tmux via go get
+#   shell: go get github.com/ericksonjoseph/json2tmux
+#   args:
+#     chdir: "{{ go_project_path }}"
+#     executable: /bin/zsh
 
 - name: Install json2tmux binary
-  shell: go install github.com/ericksonjoseph/json2tmux
+  shell: go install github.com/ericksonjoseph/json2tmux@latest
   args:
     chdir: "{{ go_project_path }}"
     executable: /bin/zsh
