--- a/ansible-playbooks/skyplan/roles/setup_portal_spa/tasks/main.yml
+++ b/ansible-playbooks/skyplan/roles/setup_portal_spa/tasks/main.yml
@@ -25,6 +25,6 @@
   shell: |
     source {{ zsh_file }}
     cd {{ ansible_env.HOME }}/work/portal-spa
-    npm install --legacy-peer-deps
+    npm install
   args:
     chdir: "{{ ansible_env.HOME }}/work/portal-spa"
