--- a/ansible-playbooks/skyplan/roles/download_atlas/tasks/main.yml
+++ b/ansible-playbooks/skyplan/roles/download_atlas/tasks/main.yml
@@ -3,17 +3,12 @@
   command: which atlas
   register: atlas_check
   ignore_errors: true
+  changed_when: false
 
-- name: Tap ariga/tap repository
-  homebrew_tap:
-    name: ariga/tap
-    state: present
-  when: atlas_check.rc != 0
-
-- name: Install Atlas CLI via Homebrew
-  homebrew:
-    name: ariga/tap/atlas
-    state: present
+- name: Install Atlas CLI via official installer
+  shell: curl -sSf https://atlasgo.sh | sh
+  args:
+    executable: /bin/zsh
   when: atlas_check.rc != 0
 
 - name: Verify Atlas CLI is installed
